validation with class-validator & installation of postgres
